--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -197,6 +197,12 @@ body,html {
     min-height: 100%;
 }
 
+.reset-password-page {
+    background-color: #2D3142;
+    min-height: 100%;
+}
+
+
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {  }
 
