--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -143,7 +143,7 @@ body,html {
 
 .account-form-container h3 {
     color:white;
-    width: 1vw;
+    width: 100%;
 }
 
 .account-form-container a {
